# radfinder

./: .gitignore  LICENSE  README.md  frozen_pip_requirements.txt  pyproject.toml  requirements.txt
.github/: workflow-env-py312-cpu.yml
.github/workflows/: build-py312-cpu.yml
assets/demo/s0859/: README.md
configs/models/: radfinder.yaml  spectre_pretrained_dino_res.yaml  spectre_pretrained_half_patch_embed.yaml  spectre_pretrained_siglip_res.yaml
configs/rate/: _translation_prompt.txt  _translation_prompt_verify.txt  default_config_de.yaml  default_config_en.yaml
configs/rate/modalities_de/: abdomen_chest_ct.yaml  abdomen_ct.yaml  chest_ct.yaml
configs/rate/modalities_en/: abdomen_chest_ct.yaml  abdomen_ct.yaml  brain_ct.yaml  breast_mmg.yml  breast_mr.yaml  chest_ct.yaml  cxr.yaml  prostate_mr.yaml
configs/rate/pre_merge_en/: abdomen_ct.yaml  chest_ct.yaml
configs/runs/evals/: radfinder_3mm.yaml  spectre_res1.5mm.yaml  spectre_res1mm.yaml  spectre_res3mm.yaml
configs/runs/training/: train_radfinder_3mm.yaml
configs/tasks/binary_zs/: bz_ctrate_val.yaml  bz_radchestct_standard.yaml  ctrate18_to_rate_qids.json  radchestct_to_ctrate18.json  radchestct_to_ctrate18_standard.json
configs/tasks/lists/: evals.yaml
configs/tasks/retrieval/: ctrate_traindev.yaml  ctrate_val.yaml  ctrate_valdup.yaml  merlin_pool_test.yaml  merlin_pool_test_smoke.yaml  merlin_pool_val.yaml  vr_ctrate_val.yaml
hf_export/: README.md  configuration_radfinder.py  metadata.yaml  modeling_radfinder.py  processing_radfinder.py
src/radfinder/: loader_utils.py  paths.py  save_embeddings_lib.py  trainer_siglip.py
src/radfinder/cli/: check_eval_dataloader.py  check_train_dataloader.py  cleanup_checkpoints.py  cleanup_results.py  eval_binary_zs.py  eval_pool_retrieval.py  eval_retrieval.py  eval_volume_retrieval.py  export_hf.py  hf_example_dummy_input.py  hf_example_real_input.py  save_embeddings.py  show_results.py  train_siglip.py
src/radfinder/data/: ct_rate.py  ct_rate_splits.py  dataloader_args.py  dataloader_retrieval.py  dataloader_train.py  inspect.py  merlin.py  organ_texts.py  prompt_rate_labels.py  rad_chestct.py  text_feature_store.py
src/radfinder/losses/: localization_loss.py  prompt_rate_loss.py  siglip_loss.py
src/radfinder/models/: load_model.py  load_model_hf.py  modeling.py  siglip_head.py  vision_language.py  vision_transformer.py  vision_transformer_features.py
src/radfinder/tasks/: binary_zs_ctrate_task.py  binary_zs_rate_task.py  bootstrap_retrieval.py  localization_task.py  pool_retrieval_task.py  (+4 more)
src/rate/: batch_processor_fix_sglang.py  engine_from_data.py  exceptions.py  misc_rate.py  qc.py  rate_common_utils.py  rate_ctrate_utils.py  rate_inspect_utils.py  rate_merlin_utils.py  reportstructuring_validation.py  validators_with_reasoning.py
tests/radfinder/: test_bootstrap.py  test_collate_siglip.py  test_ctrate_dataset.py  test_imports_radfinder.py  test_largest_multiple_crop.py  test_load_model_config.py  test_localization_task.py  test_logging_utils.py  test_prompt_rate_labels.py  test_repr_compose.py  test_save_embeddings_lib.py  test_siglip_forward.py
tests/rate/: test_imports_rate.py  test_rate_common_utils_compat.py  test_reportstructuring_validation.py
(+82 files in other folders)
