[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radfinder"
description = "RadFinder: disease-aware vision–language models for 3D CT retrieval, classification, and localization."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
	{ name = "Simon Ging", email = "gings@cs.uni-freiburg.de" }
]
requires-python = ">=3.9"
# dynamic = ["version", "dependencies"]
dynamic = ["version"]
license = "MIT"
license-files = ["LICENSE"]

classifiers = [
    "Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Natural Language :: English",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Operating System :: OS Independent",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
]

keywords = ["medical", "ct", "vision", "deep-learning", "3d", "vision-language-pretraining", "contrastive-learning"]

[project.urls]
Homepage = "https://github.com/lmb-freiburg/radfinder"
Source = "https://github.com/lmb-freiburg/radfinder"
BugTracker = "https://github.com/lmb-freiburg/radfinder/issues"

[tool.setuptools]
zip-safe = true
platforms = ["any"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "radfinder.__version__" }
# dependencies = {file = ["requirements.txt"]}

# ---------- dev settings ----------

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow", "cuda"]

[tool.coverage.run]
source_pkgs = ["radfinder", "rate"]
branch = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.html]
directory = ".covreport"

[tool.coverage.xml]
output = ".covreport/coverage.xml"

[tool.pylint.main]
jobs = 1

[tool.pylint.messages_control]

enable = "all"

disable = [
    'suppressed-message', 'locally-disabled', 'file-ignored',
    'line-too-long', 'missing-module-docstring',
    'missing-class-docstring', 'missing-function-docstring', 'fixme',
    'f-string-without-interpolation', 'invalid-name',
    'logging-fstring-interpolation', 'consider-iterating-dictionary',
    'use-implicit-booleaness-not-comparison',
    'attribute-defined-outside-init', 'consider-using-with', 'global-statement',
    'import-outside-toplevel', 'super-init-not-called', 'broad-exception-caught',
    'disallowed-name', 'redefined-outer-name', 'use-implicit-booleaness-not-comparison-to-zero',
    'eval-used', 'unknown-option-value', 'arguments-differ','subprocess-run-check',
    'use-implicit-booleaness-not-comparison-to-string', 'use-dict-literal',
    'useless-suppression', 'too-many-positional-arguments', 'use-symbolic-message-instead',
]

[tool.pylint.format]
max-line-length = 99999
max-module-lines = 99999

[tool.pylint.refactoring]
max-nested-blocks = 9999

[tool.pylint.design]
max-args = 9999
max-attributes = 9999
max-bool-expr = 9999
max-branches = 9999
max-locals = 9999
max-parents = 9999
max-public-methods = 9999
max-returns = 9999
max-statements = 9999
min-public-methods = 0
